food order website

--- a/Food_Order_Website/foodwebsite/footer.html
+++ b/Food_Order_Website/foodwebsite/footer.html
@@ -92,8 +92,9 @@
             <a href="#"><img src="twitter.png" class="fab fa-twitter twitter-bg"></a>
             <a href="#"><img src="gmail.png" class="fab fa-google-plus-g google-bg"></a>
         </div>
-      
-        
+      <div>
+        <h5 style="color: rgb(34, 4, 4); size: 15em;width: 100%;   background-color: aliceblue;">© Divya Vartak</h5>
+      </div>
       </div>
       <!-- Grid container -->
     </footer>
